<resources>
    <string name="app_name">CineLog</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="todo">TODO</string>
    <string name="category">Category</string>
    <string name="search_movie">Search Movie</string>
    <string name="save_movie">Save Movie</string>
    <string name="poster_url">Poster URL</string>
    <string name="imdb_id">IMDB ID</string>
    <string name="type_movie_series">Type (Movie/Series)</string>
    <string name="year">Year</string>
    <string name="my_movie">My Movie</string>
    <string name="movie_details">Movie Details</string>
    <string name="shake_your_device">SHAKE YOUR DEVICE</string>
    <string name="retry">Retry</string>
    <string name="suggest_random_movie">Suggest Random Movie</string>
    <string name="update_movie">Update movie</string>
    <string name="action_icon">This is all my movie icon</string>
    <string name="empty_state_image">Empty State Image</string>
    <string name="no_data_available">No Data Available</string>
    <string name="please_check_back_later">Please check back later.</string>
    <string name="history">History</string>
    <string name="new_string">new_string</string>
    <string name="demo_user">Demo User</string>
    <string name="random_movie_title">Random Movie Title</string>
    <string name="click_here_to_generate_random_movie">Click here to generate random movie</string>
    <string name="top_10_hits_for_today">Top 10 Hits For Today</string>
    <string name="view_your_past_activities">View your past activities</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_theme_for_better_visibility">Enable dark theme for better visibility</string>
    <string name="action">Action</string>
    <string name="_12_34_pm">12:34 PM</string>
    <string name="select_genres">Select Genres</string>
    <string name="clear_serach">clear serach</string>
    <string name="no_result_found">no result found</string>
    <string name="try_different_search_term">try different search term</string>
    <string name="rating_8_5">Rating: 8.5</string>
    <string name="category_action">Category: Action</string>
    <string name="search">Search</string>
    <string name="network_error">network error</string>
    <string name="error_state_image">error state image</string>
    <string name="check_network">check network</string>
    <string name="search_icon">search icon</string>
    <string name="genre">Genre</string>
    <string name="notifications">Notifications</string>
    <string name="my_movies">My Movies</string>
    <string name="favorties">Favorties</string>
    <string name="graph">Graph</string>
    <string name="movies">Movies</string>
    <string name="rating">0.00/10 ⭐ </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="language">Language</string>
    <string name="change_language_of_the_app">Change language of the app</string>
    <string name="year_2023" translatable="false">Year: 2023</string>
    <string name="imdb_id_tt1234567" translatable="false">IMDB ID: tt1234567</string>
    <string name="type_movie" translatable="false">Type: Movie</string>
    <string name="genres_action_sci_fi" translatable="false">Genres: Action, Sci-Fi</string>
    <string name="save_rating" translatable="false">Save Rating</string>
    <string name="movie_poster" translatable="false">Movie Poster</string>
    <string name="amazing_spiderman_90" translatable="false">Amazing Spiderman 90</string>
    <string name="released_2021_01_20" translatable="false">Released: 2021-01-20</string>
    <string name="march_23_2025_at_9_58_42_am" translatable="false">March 23, 2025 at 9:58:42 AM</string>


    <string name="action_">Action</string>
    <string name="category_comedy">Comedy</string>
    <string name="category_drama">Drama</string>
    <string name="category_horror">Horror</string>
    <string name="category_thriller">Thriller</string>
    <string name="category_scifi">Sci-Fi</string>
    <string name="filter">Filter</string>
    <string name="others">Others</string>

    <string name="chart_genre_popularity">Genre Popularity</string>
    <string name="chart_genre_description">Movie Genre Popularity (%)</string>
    <string name="chart_top_movies">Top 5 Watched Movies</string>
    <string name="chart_bar_description">Total Watch Hours per Movie</string>
    <string name="chart_daily_watch">Daily Watch Time (Hours)</string>
    <string name="chart_line_description">Daily Watch Hours Trend</string>


    <string name="title_1">Welcome to Cinelog</string>
    <string name="desc_1">Log, rate, and review the movies you watch. Your personalized movie diary starts here.</string>

    <string name="title_2">Shake to Discover</string>
    <string name="desc_2">Not sure what to watch? Shake your phone to get a random movie from your list.</string>

    <string name="title_3">Track Your Film Habits</string>
    <string name="desc_3">See your movie-watching trends with beautiful graphs and insights.</string>

    <string name="title_4">Filter by Year</string>
    <string name="desc_4">Easily find diary entries by release year to revisit your favorite movie eras.</string>

    <string name="title_5">Save and Favorite Films</string>
    <string name="desc_5">Mark the films you love and keep them organized for quick access anytime.</string>

    <string name="title_6">Add Reviews Instantly</string>
    <string name="desc_6">Write notes, give ratings, and store details the moment you finish a movie.</string>

    <string name="title_7">Customize Your App</string>
    <string name="desc_7">Switch between light and dark themes, and choose your preferred language in settings.</string>


</resources>