<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieListFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies" />
    <item
        android:id="@+id/graphFragment"
        android:icon="@drawable/ic_graph"
        android:title="@string/graph" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorties" />
    <item
        android:id="@+id/myMovieFragment"
        android:icon="@drawable/ic_my_movies"
        android:title="@string/my_movies" />

    <item
        android:id="@+id/othersFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />

</menu>