<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    app:cardElevation="0dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border">

        <ImageView
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/movie_title"
            android:src="@drawable/ic_movie" />

        <ImageView
            android:padding="12dp"
            android:id="@+id/ivShare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_share"
            app:tint="?android:attr/textColorPrimary" />

        <TextView
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_image"
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="4dp"
            android:maxLines="2"
            android:text="@string/movie_title"
            app:layout_constraintBottom_toTopOf="@id/movie_overview"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            app:layout_constraintBottom_toTopOf="@id/movie_release_date"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/overview"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/release_date"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_overview"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp" />

        <ImageView
            android:padding="4dp"
            android:id="@+id/fab_button"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_fab"
            app:tint="?attr/colorSecondary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>